# kek-lang

./: BuiltinTypes.h  CMakeLists.txt  CompileContext.h  Console.cpp  Console.h  IRGenerator.cpp  IRGenerator.h  NodeAST.h  NodeASTParser.cpp  NodeASTParser.h  NodeASTPrinter.cpp  NodeASTPrinter.h  NodeASTVisitor.h  README.md  Token.h  Tokenizer.cpp  Tokenizer.h  main.cpp  test.kek
.github/workflows/: ccpp.yml
Compiler/: BackendCompiler.cpp  BackendCompiler.h  LLVMCompiler.cpp  LLVMCompiler.h  VariablesScope.cpp
Lexer/: Lexer.cpp  Lexer.h  OperatorDefinition.h  Token.h
NodeAST/: BinaryOperatorNodeAST.h  CallNodeAST.h  FileNodeAST.h  FunctionBodyNodeAST.h  FunctionDefinitionNodeAST.h  FunctionPrototypeNodeAST.h  NodeAST.h  NumberNodeAST.h  ReferenceNodeAST.h
ParserAST/: NodeASTParser.cpp  NodeASTParser.h
Printer/: ASTPrinter.cpp  ASTPrinter.h  ASTPrinterOutput.cpp  ASTPrinterOutput.h
Source/: CMakeLists.txt
Source/Compiler/: LLVMCompiler.cpp  VariablesScope.h
Source/Lexer/: Lexer.cpp  Lexer.h  OperatorDefinition.h  Token.h
Source/NodeAST/: BinaryOperatorNodeAST.h  CallNodeAST.h  FileNodeAST.h  FunctionPrototypeNodeAST.h  all.h
Source/Printer/: ASTPrinter.cpp
Source/Utilities/: Arguments.cpp  Arguments.h  Console.cpp  ParsingException.h
Tests/: ArgumentsTests.cpp  CMakeLists.txt  LexerTests.cpp  TestUtilities.cpp  TestUtilities.h  TestUtils.h
Utilities/: Arguments.cpp  Arguments.h  NodeASTValueVisitor.h  NodeASTVisitor.h  ParsingException.h  SourceLocation.h
